fix responsive and direction of despachantes on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -926,25 +926,148 @@ h6 {
   margin-top: 15vh;
 }
 
-.despachantes-arg-container {
-  margin-top: 40px;
-  margin-bottom: 40px;
-  padding: 20px;
-}
-.despachantes-arg-container img {
-  width: 409px;
-  height: 327px;
+.despachantes-container .despacantes-cards  img{
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-.despachantes-br-container {
-  margin-top: 40px;
-  margin-bottom: 40px;
-  padding: 20px;
+.despachantes-container{
+  display: grid;
+  place-items: center;
 }
-.despachantes-br-container img {
-  width: 409px;
-  height: 327px;
+
+.despachantes-cards{
+  display: flex;
+  gap: 100px;
+  align-items: center;
 }
+
+.card__article{
+  position: relative;
+}
+
+.card__img{
+  width: 328px;
+  border-radius: 15px;
+}
+
+.card__data {
+  width: 280px;
+  background-color: #fff;
+  padding: 1.5rem 1rem;
+  box-shadow: 0 8px 24px hsla(0, 0%, 0%, .15);
+  border-radius: 1rem;
+  position: absolute;
+  bottom: -9rem;
+  left: 0;
+  right: 0;
+  margin-inline: auto;
+  opacity: 0;
+  transition: opacity 1s 1s;
+}
+
+.card__description{
+  display: block;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+.card__title{
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 4px;
+}
+
+.card__button{
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.card__button:hover{
+  text-decoration: underline;
+}
+
+.card__article:hover .card__data{
+  animation: show-data 1s forwards;
+  opacity: 1;
+  transition: opacity .3s;
+}
+
+.card__article:hover{
+  animation: remove-overlow 2s forwards;
+}
+
+.card__article:not(:hover){
+  animation: show-overflow 2s forwards;
+}
+
+.card__article:not(:hover) .card__data{
+  animation: remove-data 1s forwards;
+}
+
+@keyframes show-data{
+  50%{
+      transform: translateY(-10rem);
+  }
+  100%{
+      transform: translateY(-7rem);
+  }
+}
+
+@keyframes remove-overflow{
+  to{
+      overflow: initial;
+  }
+}
+
+@keyframes remove-data{
+  0%{
+      transform: translateY(-7rem);
+  }
+  50%{
+      transform: translateY(-10rem);
+  }
+  100%{
+      transform: translateY(.7rem);
+  }
+}
+
+@keyframes show-overflow{
+  0%{
+      overflow: hidden;
+      pointer-events: none;
+  }
+  50%{
+      overflow: hidden;
+  }
+}
+
+@media (max-width:1024px){
+  .despachantes-cards{
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (max-width:576px){
+  .info-aduana-container{
+  width: 80%;
+  margin: auto;
+  margin-top: 15vh;
+  }
+  .info-aduana-container h2{
+    font-size: 24px;
+  }
+  .info-aduana-container p{
+    font-size: 14px;
+  }
+  .despachantes-container span h2{
+    font-size: 24px;
+  }
+}
+
+
 
 /*ESTILOS pagina TURISMO*/
 .info-leyes-container {
